// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HabitWheel Component handles invalid success counts 1`] = `
<View
  style={
    Object {
      "margin": 30,
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <ARTSurfaceView
    style={
      Array [
        undefined,
        Object {
          "height": 690,
          "width": 690,
        },
      ]
    }
  >
    <ARTGroup
      opacity={1}
      transform={
        Array [
          6.123233995736766e-17,
          -1,
          1,
          6.123233995736766e-17,
          0,
          690,
        ]
      }
    >
      <ARTShape
        d={
          Array [
            0,
            517.5,
            345,
            4,
            345,
            345,
            172.5,
            0,
            6.283185307179586,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#f5f5f5"
        strokeCap={1}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTGroup
        opacity={1}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
    </ARTGroup>
  </ARTSurfaceView>
</View>
`;

exports[`HabitWheel Component renders a full circle with all successes 1`] = `
<View
  style={
    Object {
      "margin": 30,
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <ARTSurfaceView
    style={
      Array [
        undefined,
        Object {
          "height": 690,
          "width": 690,
        },
      ]
    }
  >
    <ARTGroup
      opacity={1}
      transform={
        Array [
          6.123233995736766e-17,
          -1,
          1,
          6.123233995736766e-17,
          0,
          690,
        ]
      }
    >
      <ARTShape
        d={
          Array [
            0,
            517.5,
            345,
            4,
            345,
            345,
            172.5,
            0,
            6.283185307179586,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#f5f5f5"
        strokeCap={1}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            517.394917660794,
            351.02016318118143,
            4,
            345,
            345,
            172.5,
            0.03490658503988659,
            0.8984954989266809,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#e0474721"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            447.6553277862689,
            483.62948343369703,
            4,
            345,
            345,
            172.5,
            0.9334020839665675,
            1.7969909978533618,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#e0474742"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            300.4700498337862,
            511.65333341459007,
            4,
            345,
            345,
            172.5,
            1.8318975828932482,
            2.6954864967800427,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#e0474763"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            186.8792545552059,
            413.94983582273875,
            4,
            345,
            345,
            172.5,
            2.73039308181993,
            3.593981995706724,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#e0474785"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            192.5786139568356,
            264.2288970195365,
            4,
            345,
            345,
            172.5,
            3.6288885807466102,
            4.4924774946334045,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#e04747a6"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            313.26839201930574,
            175.4436522717019,
            4,
            345,
            345,
            172.5,
            4.527384079673291,
            5.390972993560085,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#e04747c7"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            457.89727063193357,
            214.5758600417087,
            4,
            345,
            345,
            172.5,
            5.425879578599972,
            6.289468492486765,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#e04747e8"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTGroup
        opacity={1}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
    </ARTGroup>
  </ARTSurfaceView>
</View>
`;

exports[`HabitWheel Component renders a half-full circle with some successes 1`] = `
<View
  style={
    Object {
      "margin": 30,
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <ARTSurfaceView
    style={
      Array [
        undefined,
        Object {
          "height": 690,
          "width": 690,
        },
      ]
    }
  >
    <ARTGroup
      opacity={1}
      transform={
        Array [
          6.123233995736766e-17,
          -1,
          1,
          6.123233995736766e-17,
          0,
          690,
        ]
      }
    >
      <ARTShape
        d={
          Array [
            0,
            517.5,
            345,
            4,
            345,
            345,
            172.5,
            0,
            6.283185307179586,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#f5f5f5"
        strokeCap={1}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            517.394917660794,
            351.02016318118143,
            4,
            345,
            345,
            172.5,
            0.03490658503988659,
            0.8984954989266809,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#2aad5e21"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            447.6553277862689,
            483.62948343369703,
            4,
            345,
            345,
            172.5,
            0.9334020839665675,
            1.7969909978533618,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#2aad5e42"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            300.4700498337862,
            511.65333341459007,
            4,
            345,
            345,
            172.5,
            1.8318975828932482,
            2.6954864967800427,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#2aad5e63"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTShape
        d={
          Array [
            0,
            186.8792545552059,
            413.94983582273875,
            4,
            345,
            345,
            172.5,
            2.73039308181993,
            3.593981995706724,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#2aad5e85"
        strokeCap={0}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTGroup
        opacity={1}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
    </ARTGroup>
  </ARTSurfaceView>
</View>
`;

exports[`HabitWheel Component renders an empty circle with no successes 1`] = `
<View
  style={
    Object {
      "margin": 30,
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <ARTSurfaceView
    style={
      Array [
        undefined,
        Object {
          "height": 690,
          "width": 690,
        },
      ]
    }
  >
    <ARTGroup
      opacity={1}
      transform={
        Array [
          6.123233995736766e-17,
          -1,
          1,
          6.123233995736766e-17,
          0,
          690,
        ]
      }
    >
      <ARTShape
        d={
          Array [
            0,
            517.5,
            345,
            4,
            345,
            345,
            172.5,
            0,
            6.283185307179586,
            1,
          ]
        }
        fill={null}
        opacity={1}
        stroke="#f5f5f5"
        strokeCap={1}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={345}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
      <ARTGroup
        opacity={1}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
    </ARTGroup>
  </ARTSurfaceView>
</View>
`;
